# biquadris

./: .gitignore  Board.h  CMakeLists.txt  Game.h  Level.cc  Level.h  Makefile  Position.h  README.md  biquadris  biquadris_sequence1.txt  main.cc  score.cc  sequence1.txt  trie-impl.cc  trie.cc  view.cc  window.cc  window.h
Blocks/: IBlock.h  JBlock.cc  JBlock.h  LBlock.cc  LBlock.h  OBlock.h  SBlock.cc  SBlock.h  TBlock.h  ZBlock.cc  ZBlock.h
Levels/: Level0.cc  Level1.cc  Level1.h  Level2.h  Level3.h  Level4.cc
assets/: sequence2.txt
src/: main.cc
src/Blocks/: IBlock.cc  IBlock.h  JBlock.h  LBlock.h  OBlock.cc  OBlock.h  SBlock.h  TBlock.cc  TBlock.h  ZBlock.h
src/Levels/: Level0.h  Level2.cc  Level3.cc  Level4.h
src/core/: Block.cc  Block.h  Board.cc  Game.cc  Game.h  Position.cc  score.h
src/ui/: view.h
